# reseize

./: Cargo.toml  rustfmt.toml
src/: auth.rs  capture.rs  client.rs  err.rs  lib.rs  stream.rs
