[package]
name = "reseize"
version = "0.1.0"
edition = "2021"
readme = "readme.md"
authors = ["Danil Karpenko <limpix31@gmail.com>"]
license = "MIT"
description = "Capture images from mjpeg stream"
rust-version = "1.78"

[dependencies]
tracing       = { version = "0.1", optional = true }
thiserror     = { version = "1" }
tokio         = { version = "1", features = ["rt-multi-thread"] }
tokio-util    = { version = "0.7" }
reqwest       = { version = "0.12", features = ["stream"] }
bytes         = { version = "1" }
futures-util  = { version = "0" }
futures-core  = { version = "0" }
async-channel = { version = "2" }
image         = { version = "0.25", optional = true }
